--- a/css/text-page.css
+++ b/css/text-page.css
@@ -1861,6 +1861,9 @@ line-height: 13.92px;
     max-width: 800px;
     margin-left: 11px;
     }
+    .skin-top-title-ad{
+        display: none;
+    }
     .skin-top-wrapp{
         display: flex;
         margin-left: 8px;
@@ -1939,14 +1942,76 @@ line-height: 13.92px;
         background: #353430;
         cursor: pointer;
     }
+    .container-like-com-ad{
+        display: none;
+    }
+    .comments-likes-wrapp{
+      
+        
+        margin-top: 16px;
+        
+    }
+    .num-comments{
+     
+        max-height: 23px;
+        display: flex;
+        
+    }
+    .num-comment-img{
+        line-height: 0;
+    }
+    .date-post-skin{
+        display: flex;
+        align-items: center;
+    }
+   
+    .date-post-skin{
+        border-left: 1.25714px solid #D9D9D9 ;
+        border-right: 1.25714px solid #D9D9D9;
+    }
+    .container-like-com{
+        max-width: 810px;
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+    }
+    .come-like-blc>img{
+        display: block;
+        margin-right: 6px;
+        position: relative;
+        top: -2px;
+        line-height: 0;
+    }
+    .com-like-date{
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 25px;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.09em;
+        padding-left: 15px;
+        padding-right: 18px;
+        margin-right: 14px;
+        margin-left: 14px;
+        color: #808080;
+        border-right: 1px solid #D9D9D9;
+        border-left: 1px solid #D9D9D9;
+    }
 
-
-
-
-
+    .come-like-blc{
+        display: flex;
+        align-items: center;
+        font-weight: 800;
+        font-size: 20px;
+        line-height: 26px;
+        letter-spacing: 0.09em;
+        transition: 0.5s;
+        cursor: pointer;
+        color: #808080;
+    }
 
     .section-skin-mid{
-        margin-top: 34px;
+        margin-top: 75px;
     }    
     .skin-mid-txt-wrapp{
         max-width: 800px;
@@ -1961,6 +2026,21 @@ line-height: 13.92px;
         line-height: 154.7%;
         letter-spacing: 0.09em;
         color: #000000;
+        margin-bottom: 42px;
+    }
+    .mid-txt-stl-l{
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 154.7%;
+        letter-spacing: 0.09em;
+        color: #000000;
+        margin-bottom: 33px;
+    
+    }
+    .mid-txt-stl-l:last-child{
+        margin-bottom: 0;
     }
     .mid-txt-title{
         font-family: 'Circe';
@@ -1970,12 +2050,13 @@ line-height: 13.92px;
         line-height: 154.7%;
         letter-spacing: 0.09em;
         color: #000000;
+        
     }
 
 
     .skin-list{
         margin-left: 17px;
-        margin-top: 25px;
+        padding-top: 3px;
     }
     .skin-list-item{
         font-family: 'Circe';
@@ -2040,8 +2121,151 @@ line-height: 13.92px;
         letter-spacing: 0.09em;
         color: #000000;
         margin-left: 11px;
-        margin-top: 19px;
+        padding-top: 19px;
         margin-bottom: 21px;
+    }
+    .skin-comment-wrapp{
+        padding-bottom: 11px;
+    }
+    .skin-comment-item{
+        margin-left: 11px;
+        margin-bottom: 20px;
+        max-width: 665px;
+    }
+    .author-comment-name{
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 17.1983px;
+        line-height: 22px;
+        letter-spacing: 0.09em;
+        color: #000000;
+    }
+    .date-post-comment{
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15.3583px;
+        line-height: 20px;
+        text-align: center;
+        letter-spacing: 0.09em;
+        color: #949494;
+        margin-left: 17px;
+    }
+    .skin-comment-bot{
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15.3583px;
+        line-height: 26px;
+        letter-spacing: 0.09em;
+        color: #000000;
+        margin-top: 15px;
+    }
+    .comment-top{
+        padding-top: 15px;
+        border-top: 1px solid #D9D9D9;
+    }
+    .comment-bot{
+        padding-top: 23px;
+        border-top: 1px solid #D9D9D9;
+    }
+    .section-your-comment{
+        margin-bottom: 55px;
+    }
+    .your-comment-title{
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 25px;
+        line-height: 144.7%;
+        letter-spacing: 0.09em;
+        color: #000000;
+        margin-top: 29px;
+        margin-left: 11px;
+    }
+    .your-comment-wrapp{
+
+    }
+    .your-comment-wrapp>form>input{
+        display: block;
+        width: 320px;
+        height: 68px;
+        padding-left: 16px;
+        font-size: 20px;
+        color: #737373;
+        outline: none;
+        margin-top: 23px;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 20px;
+        line-height: 26px;
+        
+        color: #B6B6B6;
+    }
+    .your-comment-wrapp>form>textarea{
+        display: block;
+        width: 780px;
+        height: 250px;
+        margin-top: 31px;
+        padding-left: 16px;
+        font-size: 20px;
+        color: #737373;
+        outline: none;
+     
+        padding-top: 24px;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 20px;
+        line-height: 26px;
+      
+        color: #B6B6B6;
+    }
+    .your-comment-add-img{
+        margin-top: 15px;
+        line-height: 0;
+        display: flex;
+        cursor: pointer;
+        max-width: 220px;
+    }
+    .your-comment-add-img>img{
+       max-width: 22px;
+        max-height: 22px;
+    }
+    .wrapp-for-link-img{
+        display: flex;
+        align-items: center;
+        color: #F09661;
+      
+        margin-left: 7px;
+        padding-top: 10px;
+    }
+    .wrapp-for-link-img>span{
+       border-bottom: 1px solid #F09661;
+       padding-bottom: 7px;
+    }
+    .your-comment-add-img:hover>.wrapp-for-link-img {
+        color: #000;
+    }
+    .your-comment-add-img:hover>.wrapp-for-link-img>span{
+        border-bottom: 1px solid #000;
+    }
+    .your-comment-btn{
+        width: 277px;
+        padding: 22px 0 20px 0;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16.2863px;
+        line-height: 21px;
+        text-align: center;
+        letter-spacing: 0.09em;
+        color: #FFFFFF;
+        background: #353430;
+        margin-top: 30px;
+        cursor: pointer;
     }
 /* MEDIIIIIIAA */
 /* @media(max-width:){
@@ -2076,6 +2300,11 @@ line-height: 13.92px;
     margin-top: 20px;
 }
 }
+@media(max-width:1340px){
+    .top-wrapp-blog-container{
+        margin-right: 0;
+    }
+}
 @media(max-width:1300px){
     .about-container{
         display: none;
@@ -2099,6 +2328,44 @@ line-height: 13.92px;
     .you-order-wrapp{
         margin-top: 24px;
     }
+    .skin-top-wrapp{
+        display: block;
+    }
+    .ad-blog{
+        max-width: 800px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .blog-blc{
+        display: block;
+    }
+    .blog-blc-top, .blog-blc-mid, .blog-blc-bot{
+        margin-top: 0;
+    }
+    .blog-blc-img{
+        margin-right: 0;
+    }
+    .blog-blc-desc-btn{
+        width: 100%;
+    }
+    .blog-blc-desc-txt{
+        max-width: 176px;
+    }
+    .top-wrapp-blog-container{
+        margin-top: 30px;
+    }
+    .blog-blc-desc-txt{
+        margin-top: 10px;
+    }
+    .blog-blc-desc-btn {
+        margin-top: 10px;
+    }
+    .section-skin-mid{
+        margin-top: 30px;
+    }
+    /* .blog-blc-img>img{
+        width: 100%;
+    } */
 }
 @media(max-width:1200px){
     .you-order-wrapp{
@@ -2171,6 +2438,12 @@ line-height: 13.92px;
     }
     .ordered-title-stl{
         text-align: center;
+    }
+    .your-comment-wrapp>form>textarea{
+        width: 100%;
+    }
+    .skin-top-title{
+        font-size: 35px;
     }
 }
 @media(max-width:780px){
@@ -2327,10 +2600,6 @@ line-height: 13.92px;
  }
 
  @media(max-width:650px){
-    /* .section-top-menu-blc{
-        margin: 0 25px;
-        width: auto;
-    } */
     .about-person-name{
         font-size: 20px;
         line-height: 140.7%;
@@ -2356,13 +2625,6 @@ line-height: 13.92px;
         min-width: 177px;
         object-fit: cover;
     }
-    /* .section-top-menu-blc{
-        margin: 0 20px;
-    
-        position: relative;
-        z-index: 3;
-        background-color: #F8F4EF;;
-    }  */
     .section-bonus-give-wrapp{
         margin: 50px 20px 60px 30px;
     }
@@ -2372,6 +2634,47 @@ line-height: 13.92px;
     .txt-under-title{
         margin-left: 30px;
         margin-right: 30px;
+    }
+    .blog-blc-desc-txt{
+        font-size: 14px;
+    }
+    .blog-blc-img{
+        max-width: 176px;
+        max-height: 134px;
+    }
+    .blog-blc-img>img{
+        max-width: 176px;
+        max-height: 134px;
+        object-fit: cover;
+        width: 100%;
+    }
+    .ad-blog{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .blog-blc{
+        margin: 20px 10px;
+        width: 50%;
+
+    }
+    .blog-container-title{
+        text-align: center;
+    }
+    .blog-blc-desc-btn{
+       width: 176px;
+    }
+    .blog-blc-desc{
+        align-items: center;
+    }
+
+    .blog-blc-img{
+    margin: 0 auto;
+    }
+    .skin-top-title{
+        font-size: 28px;
+        line-height: 40px;
     }
  }
 
@@ -2439,6 +2742,14 @@ line-height: 13.92px;
         }
         .form-order-title-stl{
             font-size: 30px;
+        }
+        .come-like-blc, .com-like-date{
+            font-size: 14px;
+        }
+        .com-like-date{
+            padding: 8px;
+            margin-right:8px ;
+            margin-left: 8px;
         }
 }
 
@@ -3577,6 +3888,194 @@ line-height: 154.7%;
       .sel-hide{
         display: block;
       }
+      .skin-top-wrapp{
+        margin-left: 0;
+      }
+      .skin-top-title{
+        display: none;
+      }
+      .skin-top-title-ad{
+        display: block;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 31px;
+        letter-spacing: 0.09em;
+        color: #000000;
+        margin-top: 35px;
+      }
+
+      .container-like-com{
+        display: none;
+      }
+      .container-like-com-ad{
+        display: flex;
+      }
+      .container-like-com-ad{
+        padding-top: 18px;
+        border-top: 1px solid #D9D9D9;
+      }
+      .com-like-date{
+        font-size: 12.8019px;
+        line-height: 16px;
+        letter-spacing: 0.09em;
+        padding: 0;
+        margin: 0;
+        border: none;
+      }
+      .come-like-blc>p{
+
+      }
+      .come-like-blc>p>img{
+        max-height: 15px;
+        max-width: 15px;
+        
+      }
+      .com-like-date>span{
+        padding-left: 5px;
+        margin-right: 9px;
+      }
+      .com-like-date>p{
+       margin-left: 1px;
+        
+      }
+      .view-eye-ad{
+        margin-right: 4px;
+      }
+      .view-message-ad{
+        margin-right: 6px;
+      }
+      .come-like-blc{
+        font-size: 12.8019px;
+        line-height: 16px;
+        letter-spacing: 0.09em;
+        padding: 0 11px;
+      }
+      .view-date-ad, .view-eye-ad, .view-message-ad{
+        line-height: 0;
+      }
+      .view-eye-bd{
+        border-right: 1px solid #D9D9D9;
+        border-left: 1px solid #D9D9D9;
+      }
+      .skin-mid-txt-wrapp {
+        margin-left: 0;
+        margin-bottom: 0;
+      }
+      .top-wrapp-blog-container{
+        display: none;
+      }
+      .mid-txt-stl, .mid-txt-title{
+        
+        font-size: 15px;
+        line-height: 19px;
+      }
+      .mid-txt-title{
+        font-weight: 600;
+      }
+      .skin-list{
+        margin: 0;
+      }
+      .skin-list-item{
+        font-size: 15px;
+        line-height: 19px;
+        margin-left: 0;
+      }
+      .skin-list-item::before{
+        display: none;
+      }
+      .skin-mid-img{
+        margin-left: 0;
+        margin-top: 30px;
+      }
+      .skin-mid-txt-bot-wrapp{
+        margin-left: 0;
+        margin-top: 25px;
+        margin-bottom: 22px;
+      }
+      .skin-comments-title{
+        margin-top: 14px;
+        margin-left: 3px;
+        font-size: 20px;
+        line-height: 26px;
+        margin-bottom: 22px;
+      }
+      .skin-comment-item{
+        margin-left: 0;
+        font-size: 17.1983px;
+        line-height: 22px;
+        margin-bottom: 15px;
+        margin-left: 3px;
+      }
+      .comment-top{
+        padding-top: 13px;
+      }
+      .date-post-comment{
+        font-size: 15.3583px;
+        line-height: 20px;
+      }
+      .skin-comment-bot{
+        margin-top: 14px;
+      }
+      .comment-bot{
+        padding-top: 21px;
+      }
+      .your-comment-title{
+        margin-top: 23px;
+        margin-left: 3px;
+        font-size: 20px;
+        line-height: 26px;
+      }
+      .your-comment-wrapp>form>input{
+        margin-top: 26px;
+        height: 50px;
+        width: 230px;
+        font-size: 14.5153px;
+        line-height: 19px;
+        margin-left: 3px;
+      }
+      .your-comment-wrapp>form>textarea{
+        margin-top: 22px;
+        height: 180px;
+        margin-left: 3px;
+        font-size: 14.5153px;
+        line-height: 19px;
+      }
+      .your-comment-add-img{
+        margin-top: 15px;
+      }
+      .wrapp-for-link-img{
+        font-size: 13.5265px;
+        line-height: 17px;
+        padding-top: 0;
+        margin-left: 6px;
+      }
+      .wrapp-for-link-img>span{
+        padding-bottom: 6px;
+        line-height: 0;
+        padding-top: 10px;
+      }
+      .your-comment-btn{
+        margin-top: 20px;
+        margin-left: 3px;
+        width: 216px;
+        padding-top: 17px;
+        padding-bottom: 16px;
+        font-size: 12.6997px;
+        line-height: 16px;
+        text-align: center;
+        letter-spacing: 0.09em;
+      }
+      .section-your-comment{
+        margin-bottom: 40px;
+      }
+    .mid-txt-stl{
+        margin-bottom: 22px;
+    }
+    .mid-txt-title{
+        margin-bottom: 27px;
+    }
 }
 
 
