--- a/css/user-data.css
+++ b/css/user-data.css
@@ -897,9 +897,12 @@
 
 
 .exit-popup-wrapp{
-    position: absolute;
-    left: 20%;
-    top:20%;
+    top: 35%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    z-index: 20;
     width: 560px;
     height: 298px;
     background-color: #fff;
@@ -987,6 +990,16 @@
     position: absolute;
     border-radius: 21px;
     transform: rotate(-45deg);
+}
+.bg-popup{
+    width: 100%;
+    height: 1000%;
+    z-index: 19;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.15);
+    display: none;
+    top: 0;
+    left: 0;
 }
 
 /* MEDIAAAAAAA */
@@ -1301,6 +1314,9 @@
        align-items: center;
     }
     .user-data-form-wrapp{
+        padding-bottom: 0;
+    }
+    .user-form-pass-wrapp-pass{
         padding-bottom: 45px;
     }
     .user-form-date-mid{
@@ -1722,9 +1738,12 @@
         height: 20px;
     }
     .exit-popup-wrapp{
-        position: absolute;
-        top:20%;
-        left: 16px;
+        top: 48%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        position: fixed;
+        z-index: 20;
         width: 359px;
         height: 217px;
         background-color: #fff;
