--- a/css/text-page.css
+++ b/css/text-page.css
@@ -12,7 +12,16 @@ textarea{
     align-items: center;
     justify-content: center;
 }
-
+.bg-popup{
+    width: 100%;
+    height: 1000%;
+    z-index: 19;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.15);
+    display: none;
+    top: 0;
+    left: 0;
+}
 .top-desc-heading{
 
 
@@ -1846,8 +1855,83 @@ line-height: 13.92px;
         position: relative;
     }
 
+    .popup-tgiven-wrapp{
+        width: 560px;
+        height: 297px;
+        position: fixed;
+        top: 35%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        display: none;
+        z-index: 20;
+    }
+    .tgiven-img{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .tgiven-txt{
+        text-align: center;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 22.1206px;
+        line-height: 28px;
+        letter-spacing: 0.09em;
+        margin-top: 28px;
+    }
+    .tgiven-desc{
+        text-align: center;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18.9667px;
+        line-height: 151.7%;
+        letter-spacing: 0.09em;
+        margin-top: 21px;
+        max-width: 450px;
+        margin: 21px auto 0;
+    }
 
-
+    .exit-popup-close{
+        top:15px
+    }
+    .exit-popup-status{
+        margin-top: 9px;
+        margin-left: 13px;
+    }
+    .exit-popup-close{
+        position: absolute;
+        z-index: 6;
+        right: 2px;
+        cursor: pointer;
+        width: 24px;
+        height: 24px;
+    }
+    .exit-popup-close:hover::after ,.exit-popup-close:hover::before{
+        background-color: #92A35F;
+    }
+    .exit-popup-close::before{
+        content: '';
+        width: 2px;
+        height: 24px;
+        background-color: #000;
+        position: absolute;
+        transform: matrix(-0.71, -0.71, -0.71, 0.71, 0, 0);
+        border-radius: 21px;
+    }
+    .exit-popup-close::after{
+        content: '';
+        width: 2px;
+        height: 24px;
+        background-color: #000;
+        position: absolute;
+        border-radius: 21px;
+        transform: rotate(-45deg);
+    }
 /* HOW SKIN PAGE */
     .section-skin-top{
 
