--- a/css/user-data.css
+++ b/css/user-data.css
@@ -898,7 +898,7 @@
 
 
 .exit-popup-wrapp{
-    top: 35%;
+    top: 461px;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -1121,8 +1121,16 @@
 }
 @media(max-width:600px){
     .my-order-popup{
-       width: auto;
+       width: 80%;
+       padding-bottom: 10px;
+       
     }
+    .exit-popup-wrapp{
+        width: 90%;
+    }
+    /* .my-order-popup-status{
+        margin-bottom: 10px;
+    } */
 }
 @media(max-width:500px){
     .my-order-data-container{
@@ -1644,15 +1652,14 @@
     }
     .my-order-popup{
         z-index: 20;
-        width: 100%;
+        width: 360px;
         height:auto;
         padding-top: 0;
         padding-left: 5px;
         padding-right: 5px;
         padding-bottom: 19px;
-        max-width: 360px;
         position: fixed;
-        top:415px;
+        top:447px;
         /* margin-top: 595px; */
     }
     .my-order-popup-close{
@@ -1746,7 +1753,7 @@
         height: 20px;
     }
     .exit-popup-wrapp{
-        top: 38%;
+        top: 288px;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
@@ -1755,7 +1762,6 @@
         width: 359px;
         height: 217px;
         background-color: #fff;
-        border: 1px solid #000;
         display: none;
         padding-top: 27px;
     }
@@ -1802,5 +1808,20 @@
         text-align: center;
         letter-spacing: 0.09em;
         color: #FFFFFF;
+    }
+
+    @media(max-width:370px){
+        .my-order-popup{
+            width:90%
+        }
+    }
+
+
+
+
+    @media(max-width:370px){
+        .exit-popup-wrapp{
+            width: 90%;
+        }
     }
 }  
