--- a/css/text-page.css
+++ b/css/text-page.css
@@ -1859,7 +1859,7 @@ line-height: 13.92px;
         width: 560px;
         height: 297px;
         position: fixed;
-        top: 35%;
+        top: 403px;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
@@ -1897,7 +1897,7 @@ line-height: 13.92px;
     }
 
     .exit-popup-close{
-        top:15px
+        top:14px;
     }
     .exit-popup-status{
         margin-top: 9px;
@@ -1906,10 +1906,14 @@ line-height: 13.92px;
     .exit-popup-close{
         position: absolute;
         z-index: 6;
-        right: 2px;
+        right:11px;
         cursor: pointer;
         width: 24px;
         height: 24px;
+   
+    }
+    .exit-popup-close-order-form{
+        display: none;
     }
     .exit-popup-close:hover::after ,.exit-popup-close:hover::before{
         background-color: #92A35F;
@@ -1922,6 +1926,7 @@ line-height: 13.92px;
         position: absolute;
         transform: matrix(-0.71, -0.71, -0.71, 0.71, 0, 0);
         border-radius: 21px;
+        left: 50%;
     }
     .exit-popup-close::after{
         content: '';
@@ -1931,7 +1936,9 @@ line-height: 13.92px;
         position: absolute;
         border-radius: 21px;
         transform: rotate(-45deg);
+        left: 50%;
     }
+  
 /* HOW SKIN PAGE */
     .section-skin-top{
 
@@ -2761,6 +2768,10 @@ line-height: 13.92px;
     .skin-top-title{
         font-size: 28px;
         line-height: 40px;
+    }
+    .popup-tgiven-wrapp{
+        width: 90%;
+        
     }
  }
 
@@ -4162,6 +4173,54 @@ line-height: 154.7%;
     .mid-txt-title{
         margin-bottom: 27px;
     }
+    .popup-tgiven-wrapp{
+        width: 360px;
+        height: auto;
+        position: fixed;
+        top: 279px;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        display: none;
+        z-index: 20;
+    }
+    .tgiven-img{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 26px;
+
+    }
+    .tgiven-img>img{
+
+    }
+    .tgiven-txt{
+        text-align: center;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15.7815px;
+        line-height: 20px;
+        letter-spacing: 0.09em;
+        margin-top: 13px;
+    }
+    .tgiven-desc{
+        text-align: center;
+        font-family: 'Circe';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 11.4149px;
+        line-height: 15px;
+        letter-spacing: 0.09em;
+        margin-top: 13px;
+        max-width: 263px;
+        margin: 21px auto 0;
+        margin-bottom: 31px;
+    }
+    .exit-popup-close-order-form{
+        display: block;
+    }
 }
 
 
@@ -4173,6 +4232,11 @@ line-height: 154.7%;
     .wrapp-btn-about-cat-bonus{
         margin: 22px 41px 36px 41px;
      } 
+}
+@media(max-width:360px){
+      .popup-tgiven-wrapp{
+        width: 90%;
+      }  
 }
 @media(max-width:330px){
     .choise-type-number-blc{
