--- a/css/catalog.css
+++ b/css/catalog.css
@@ -457,6 +457,24 @@ margin-bottom:25px;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
+.catalog-filter-row-search{
+    position: relative;
+    margin-bottom: 20px;
+    display: none;
+}
+.catalog-filter-row-search input{
+    width: 100%;
+    height: 33.48px;
+    border: 1px solid #353430;
+    border-radius: 0;
+    background: white;
+    padding-left: 10px;
+    padding-right: 40px;
+}
+.catalog-filter-row-search .header-serach-button{
+    right: 5px;
+}
+
 @media(max-width:768px){
     .catalog{
         padding-top: 175.5px;
